--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "bootstrap": "^4.6.0"
   },
   "devDependencies": {
     "react-scripts-kotlin": "4.0.3"
