--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "bootstrap": "^4.6.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "react-scripts-kotlin": "4.0.3"
